# backpack-regex-example

./: regex-example.cabal
str-bytestring/: Str.hs
str-string/: Str.hs
